--- a/package.json
+++ b/package.json
@@ -1,5 +1,22 @@
 {
+  "name": "see-the-code",
+  "version": "1.0.0",
+  "description": "",
+  "private": "true",
+  "keywords": [],
+  "author": "Nico D Alfonso",
+  "license": "MIT",
+  "scripts": {
+    "build": "webpack"
+  },
   "dependencies": {
     "xterm": "^4.13.0"
+  },
+  "devDependencies": {
+    "css-loader": "^5.2.6",
+    "html-webpack-plugin": "^5.3.2",
+    "style-loader": "^3.0.0",
+    "webpack": "^5.41.1",
+    "webpack-cli": "^4.7.2"
   }
 }
