--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   "author": "Nico D Alfonso",
   "license": "MIT",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "xterm": "^4.13.0"
   },
   "devDependencies": {
     "css-loader": "^5.2.6",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.3.2",
     "style-loader": "^3.0.0",
     "webpack": "^5.41.1",
