--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^5.2.6",
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.3.2",
+    "source-map-loader": "^3.0.0",
     "style-loader": "^3.0.0",
     "webpack": "^5.41.1",
     "webpack-cli": "^4.7.2"
